crates/rooch-framework-tests/tests/cases/object/object_cap.exp
processed 3 tasks

task 1 'publish'. lines 3-21:
status EXECUTED

task 2 'run'. lines 22-34:
Error: error: resource type "TestStruct" in function "0x2::context::new_object" not defined in current module or not allowed
   ┌─ /tmp/tempfile:29:23
   │
29 │         let obj_ref = context::new_object<TestStruct>(ctx, object);
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "TestStruct" in function "0x2::object::remove" not defined in current module or not allowed
   ┌─ /tmp/tempfile:30:27
   │
30 │         let test_struct = object::remove(obj_ref);
   │                           ^^^^^^^^^^^^^^^^^^^^^^^


